[gd_scene load_steps=3 format=3 uid="uid://b2ndbkv4et6g1"]

[ext_resource type="Script" uid="uid://bshdi0li1xvng" path="res://ui/overlays/base_overlay/base_overlay.gd" id="1_l5gir"]
[ext_resource type="PackedScene" uid="uid://byocrfp5gbeii" path="res://ui/overlays/base_overlay/base_section/base_section.tscn" id="2_l5gir"]

[node name="BaseOverlay" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l5gir")

[node name="OverlayBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.482353)

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -24.5
offset_right = 33.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelContainerDark"

[node name="SectionsContainer" type="VBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="RootSection" parent="PanelContainer/SectionsContainer" instance=ExtResource("2_l5gir")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
is_root = true
